tests/baselines/reference/scannerNumericLiteral4.errors.txt
==== tests/cases/compiler/scannerNumericLiteral4.ts (2 errors) ====
    1e
     ~
!!! scannerNumericLiteral4.ts(1,2): error TS1005: ';' expected.
     ~
!!! scannerNumericLiteral4.ts(1,2): error TS2095: Cannot find name 'e'.